--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         }
     ],
     "minimum-stability": "dev",
+    "bin": ["src/pohoda-raiffeisenbank-transactions.php", "src/pohoda-raiffeisenbank-setup.php"],
     "require": {
         "vitexsoftware/pohoda-connector": "dev-main",
         "vitexsoftware/rbczpremiumapi": "dev-main"
