Downloaded Statements XML import

--- a/.env.example.dist
+++ b/.env.example.dist
@@ -20,3 +20,10 @@ POHODA_TIMEOUT=60
 POHODA_COMPRESS=false
 POHODA_DEBUG=true
 POHODA_BANK_IDS=KB
+
+DB_CONNECTION=sqlsrv
+DB_HOST=127.0.0.1
+DB_PORT=1433
+DB_DATABASE=StwPh_12345678_2023
+DB_USERNAME=sa
+DB_PASSWORD=XXXXX
