--- a/debian/conf/composer.json
+++ b/debian/conf/composer.json
@@ -39,6 +39,10 @@
         },
         {
             "type": "path",
+            "url": "/usr/share/php/EaseFluentPDO/"
+        },
+        {
+            "type": "path",
             "url": "/usr/share/php/PohodaSQL"
         },
         {
