--- a/debian/rules
+++ b/debian/rules
@@ -14,5 +14,7 @@ override_dh_clean:
 
 override_dh_install:
 	dh_install
+	sed -i -e 's/..\/vendor/\/var\/lib\/composer\/pohoda-raiffeisenbank/g'   debian/pohoda-raiffeisenbank/usr/lib/pohoda-raiffeisenbank/*.php
+	sed -i -e 's/\.\.\/.env//g'  debian/pohoda-raiffeisenbank/usr/lib/pohoda-raiffeisenbank/*.php
 	jq '.version = "'`dpkg-parsechangelog | sed -n 's/^Version: //p'| sed 's/~.*//' `'"'  debian/conf/composer.json |sponge debian/pohoda-raiffeisenbank/usr/lib/pohoda-raiffeisenbank/composer.json
 	jq '.version = "'`dpkg-parsechangelog | sed -n 's/^Version: //p'| sed 's/~.*//'`'"'  multiflexi/pohoda_raiffeisenbank.multiflexi.app.json |sponge debian/multiflexi-pohoda-raiffeisenbank/usr/lib/pohoda-raiffeisenbank/multiflexi/pohoda_raiffeisenbank.multiflexi.app.json
