strict types update III

--- a/.env.example
+++ b/.env.example
@@ -27,3 +27,16 @@ DB_PORT=1433
 DB_DATABASE=StwPh_12345678_2023
 DB_USERNAME=sa
 DB_PASSWORD=XXXXX
+DB_SETTINGS=encrypt=false
+
+POHODA_DOCS='C:\Program Files (x86)\STORMWARE\POHODA SQL\Dokumenty'
+DOWNLOAD_LINK_PREFIX=https://spojenetsro.sharepoint.com/:w:/r/sites/Vvojasystmy/Sdilene%20dokumenty/Banky/
+
+OFFICE365_USERNAME=vitezslav.dvorak@spojenet.cz
+OFFICE365_PASSWORD=*************
+OFFICE365_CLIENTID=00000000-0000-0000-0000-000000000000
+OFFICE365_SECRET=00000000-0000-0000-0000-000000000000
+OFFICE365_CLSECRET=00000~00000-000000~0000000000000000.Ucb2
+OFFICE365_TENANT=spojenetsro
+OFFICE365_SITE=Vvojasystmy
+OFFICE365_PATH='Sdilene dokumenty/Banky/'
