--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "vitexsoftware/pohoda-raiffeisenbank",
+    "name": "spojenet/pohoda-raiffeisenbank",
     "description": "raiffeisenbank bank statement downloader for Stormware Pohoda",
     "license": "MIT",
     "authors": [
@@ -28,6 +28,15 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^9"
+        "phpunit/phpunit": "*",
+        "phpstan/phpstan": "*",
+        "friendsofphp/php-cs-fixer": "^3.61",
+        "ergebnis/composer-normalize": "^2.43",
+        "ergebnis/php-cs-fixer-config": "^6.34"
+    },
+    "config": {
+        "allow-plugins": {
+            "ergebnis/composer-normalize": true
+        }
     }
 }
