--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ output.xml
 /debian/multiflexi-pohoda-raiffeisenbank.debhelper.log
 /debian/pohoda-raiffeisenbank.debhelper.log
 /.build/
+/composer.lock
