--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "bin": ["src/pohoda-raiffeisenbank-transactions.php", "src/pohoda-raiffeisenbank-setup.php"],
     "require": {
         "vgrem/php-spo": "^3",
-        "vitexsoftware/pohoda-connector": "dev-main",
+        "vitexsoftware/pohoda-connector": "^0.4",
         "vitexsoftware/rbczpremiumapi": "dev-main",
         "spojenet/pohoda-sql": "dev-main"
     },
