--- a/multiflexi/pohoda_raiffeisenbank_statements.multiflexi.app.json
+++ b/multiflexi/pohoda_raiffeisenbank_statements.multiflexi.app.json
@@ -7,7 +7,7 @@
     "cmdparams": "",
     "deploy": "apt install pohoda-raiffeisenbank",
     "homepage": "https://github.com/Spoje-NET/pohoda-raiffeisenbank",
-    "requirements": "Pohoda,SQLServer,RaiffeisenBank",
+    "requirements": "mServer,SQLServer,RaiffeisenBank",
     "ociimage": "",
     "topics": "Raiffeisen,Bank,Statements,Pohoda",
     "uuid": "d660baec-aa96-4810-ad9f-b4180f27b9f1",
