--- a/multiflexi/pohoda_raiffeisenbank_transactions.multiflexi.app.json
+++ b/multiflexi/pohoda_raiffeisenbank_transactions.multiflexi.app.json
@@ -7,7 +7,7 @@
     "cmdparams": "",
     "deploy": "apt install pohoda-raiffeisenbank",
     "homepage": "https://github.com/Spoje-NET/pohoda-raiffeisenbank",
-    "requirements": "Pohoda,SQLServer,RaiffeisenBank",
+    "requirements": "mServer,SQLServer,RaiffeisenBank",
     "ociimage": "",
     "topics": "Raiffeisen,Bank,Statements,Pohoda",
     "uuid": "10f24522-66af-460c-8dc1-e6454cfc9a55",
