--- a/multiflexi/pohodasql_raiffeisenbank_sharepoint.multiflexi.app.json
+++ b/multiflexi/pohodasql_raiffeisenbank_sharepoint.multiflexi.app.json
@@ -7,7 +7,7 @@
     "cmdparams": "",
     "deploy": "apt install pohoda-raiffeisenbank",
     "homepage": "https://github.com/Spoje-NET/pohoda-raiffeisenbank",
-    "requirements": "mServer,SQLServer,RaiffeisenBank",
+    "requirements": "mServer,SQLServer,RaiffeisenBank,Office365",
     "ociimage": "",
     "topics": "Raiffeisen,Bank,Statements,Pohoda",
     "uuid": "e9893573-24aa-4518-bf05-66fae9ad153c",
