--- a/multiflexi/pohoda_raiffeisenbank_transactions.multiflexi.app.json
+++ b/multiflexi/pohoda_raiffeisenbank_transactions.multiflexi.app.json
@@ -89,6 +89,12 @@
             "description": "Pohoda Bank IDs",
             "defval": "KB",
             "required": true
+        },
+        "EASE_LOGGER": {
+            "type": "string",
+            "description": "write log messages using",
+            "defval": "console|syslog",
+            "required": false
         }
     },
     "multiflexi": "1.10.2.0"
