--- a/multiflexi/raiffeisenbank_statements_sharepoint_uploader.multiflexi.app.json
+++ b/multiflexi/raiffeisenbank_statements_sharepoint_uploader.multiflexi.app.json
@@ -1,16 +1,16 @@
 {
     "image": "",
-    "name": "Raiffeisenbank statements for PohodaSQL+Sharepoint",
-    "description": "Import Raiffeisenbank statements into PohodaSQL and store in Sharepoint",
-    "executable": "pohodasql-raiffeisenbank-statements-sharepoint",
+    "name": "Raiffeisenbank statements Sharepoint upload",
+    "description": "Upload Raiffeisenbank statements to Sharepoint",
+    "executable": "raiffeisenbank-statements-sharepoint-uploader",
     "setup": "pohoda-raiffeisenbank-setup",
     "cmdparams": "",
     "deploy": "apt install pohoda-raiffeisenbank",
     "homepage": "https://github.com/Spoje-NET/pohoda-raiffeisenbank",
-    "requirements": "mServer,SQLServer,RaiffeisenBank,Office365",
+    "requirements": "Office365,RaiffeisenBank",
     "ociimage": "",
-    "topics": "Raiffeisen,Bank,Statements,Pohoda",
-    "uuid": "e9893573-24aa-4518-bf05-66fae9ad153c",
+    "topics": "Raiffeisen,Bank,Statements,Check",
+    "uuid": "3f5dc042-afa3-40b8-9bf0-ed836dae9980",
     "environment": {
         "ACCOUNT_NUMBER": {
             "type": "text",
@@ -39,8 +39,7 @@
         "ACCOUNT_CURRENCY": {
             "type": "text",
             "description": "for multicurrency accounts please specify one",
-            "defval": "",
-            "hint": "CZK",
+            "defval": "CZK",
             "required": false
         },
         "XIBMCLIENTID": {
@@ -48,96 +47,6 @@
             "description": "ClientID",
             "defval": "",
             "required": true
-        },
-        "POHODA_ICO": {
-            "type": "text",
-            "description": "Pohoda ICO",
-            "defval": "12345678",
-            "required": true
-        },
-        "POHODA_URL": {
-            "type": "text",
-            "description": "Pohoda URL",
-            "defval": "http://127.0.0.1:10010",
-            "required": true
-        },
-        "POHODA_USERNAME": {
-            "type": "text",
-            "description": "Pohoda Username",
-            "defval": "Admin",
-            "required": true
-        },
-        "POHODA_PASSWORD": {
-            "type": "password",
-            "description": "Pohoda Password",
-            "defval": "xxxxxxxx",
-            "required": true
-        },
-        "POHODA_TIMEOUT": {
-            "type": "number",
-            "description": "Pohoda Timeout",
-            "defval": 60,
-            "required": true
-        },
-        "POHODA_COMPRESS": {
-            "type": "boolean",
-            "description": "Pohoda Compress",
-            "defval": false,
-            "required": true
-        },
-        "POHODA_DEBUG": {
-            "type": "boolean",
-            "description": "Pohoda Debug",
-            "defval": false,
-            "required": true
-        },
-        "POHODA_BANK_IDS": {
-            "type": "text",
-            "description": "Pohoda Bank IDs",
-            "defval": "KB",
-            "required": true
-        },
-        "DB_CONNECTION": {
-            "type": "text",
-            "description": "Database Connection",
-            "defval": "sqlsrv",
-            "required": true
-        },
-        "DB_HOST": {
-            "type": "text",
-            "description": "Database Host",
-            "defval": "127.0.0.1",
-            "required": true
-        },
-        "DB_PORT": {
-            "type": "number",
-            "description": "Database Port",
-            "defval": 1433,
-            "required": true
-        },
-        "DB_DATABASE": {
-            "type": "text",
-            "description": "Database Name",
-            "defval": "StwPh_12345678_2023",
-            "required": true
-        },
-        "DB_USERNAME": {
-            "type": "text",
-            "description": "Database Username",
-            "defval": "sa",
-            "required": true
-        },
-        "DB_PASSWORD": {
-            "type": "password",
-            "description": "Database Password",
-            "defval": "pohodaSQLpassword",
-            "required": true
-        },
-        "DB_SETTINGS": {
-            "type": "text",
-            "description": "Database Settings like encrypt=false",
-            "defval": "",
-            "required": false
         },
         "OFFICE365_USERNAME": {
             "type": "text",
@@ -196,13 +105,13 @@
         "RESULT_FILE": {
             "type": "string",
             "description": "write output json data to",
-            "defval": "bank_import_report_{ACCOUNT_NUMBER}.json",
+            "defval": "bank_statement_upoad_{ACCOUNT_NUMBER}.json",
             "required": false
         },
         "ZABBIX_KEY": {
             "type": "string",
             "description": "Default name for Zabbix Item key name",
-            "defval": "Raiff-Import-{ACCOUNT_NUMBER}",
+            "defval": "Raiff-Statement-{ACCOUNT_NUMBER}-toSharepoint",
             "required": false
         },
         "EASE_LOGGER": {
@@ -212,5 +121,5 @@
             "required": false
         }
     },
-    "multiflexi": "1.10.2.0"
+    "multiflexi": "1.20"
 }
