--- a/multiflexi/pohodasql_raiffeisenbank_sharepoint.multiflexi.app.json
+++ b/multiflexi/pohodasql_raiffeisenbank_sharepoint.multiflexi.app.json
@@ -193,6 +193,12 @@
             "defval": "",
             "required": false
         },
+        "APP_DEBUG": {
+            "type": "checkbox",
+            "description": "Show debug messages",
+            "defval": "False",
+            "required": true
+        },
         "RESULT_FILE": {
             "type": "string",
             "description": "write output json data to",
