better logging & exitcodes

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,7 @@ STATEMENT_LINE=MAIN
 ACCOUNT_NUMBER=640805006
 ACCOUNT_CURRENCY=CZK
 
+CNB_CACHE="http://localhost/cnb-cache/"
 
 POHODA_ICO=12345678
 POHODA_URL=http://77.87.240.111:10010
