--- a/debian/control
+++ b/debian/control
@@ -10,6 +10,7 @@ Package: pohoda-raiffeisenbank
 Architecture: all
 Multi-Arch: foreign
 Depends: ${misc:Depends}, ${shlibs:Depends}, php-vitexsoftware-rbczpremiumapi (>=1.2.3), php-spojenet-pohoda-sql (>= 0.2), php-vitexsoftware-pohoda-connector (>= 0.6.0)
+Suggests: cnb-cache
 Description: Import Raiffeisenbank statements into Pohoda
  See your Bank Account Statements in Pohoda
 
