better work with statement line

--- a/multiflexi/pohoda_raiffeisenbank_statements.multiflexi.app.json
+++ b/multiflexi/pohoda_raiffeisenbank_statements.multiflexi.app.json
@@ -61,10 +61,14 @@
             "required": true
         },
         "STATEMENT_LINE": {
-            "type": "text",
             "description": "Statement line can be MAIN or ADDITIONAL",
-            "defval": "MAIN",
-            "required": false
+            "type": "select",
+            "description": "Bank Statement line",
+            "defval": "ADDITIONAL",
+            "options": {
+                "MAIN": "Main statement line",
+                "ADDITIONAL": "Additional statement line" 
+            }
         },
         "ACCOUNT_CURRENCY": {
             "type": "text",
