--- a/multiflexi/pohoda_raiffeisenbank_statements.multiflexi.app.json
+++ b/multiflexi/pohoda_raiffeisenbank_statements.multiflexi.app.json
@@ -42,6 +42,16 @@
             "defval": "",
             "required": true
         },
+        "STATEMENT_LINE": {
+            "type": "select",
+            "description": "Bank Statement line",
+	    "defval": "ADDITIONAL",
+            "hint": "MAIN",
+            "options": {
+                "MAIN": "Main statement line",
+                "ADDITIONAL": "Additional statement line" 
+            }
+        },
         "CERT_PASS": {
             "type": "password",
             "description": "Certificate password",
