--- a/multiflexi/pohodasql_raiffeisenbank_sharepoint.multiflexi.app.json
+++ b/multiflexi/pohodasql_raiffeisenbank_sharepoint.multiflexi.app.json
@@ -50,7 +50,7 @@
             "required": true
         },
         "STATEMENT_LINE": {
-            "type": "select",
+            "type": "set",
             "description": "Bank Statement line",
 	    "defval": "ADDITIONAL",
             "hint": "MAIN",
@@ -230,7 +230,7 @@
             "required": false
         },
         "APP_DEBUG": {
-            "type": "checkbox",
+            "type": "bool",
             "description": "Show debug messages",
             "defval": "False",
             "required": true
