--- a/multiflexi/pohoda_raiffeisenbank_statements.multiflexi.app.json
+++ b/multiflexi/pohoda_raiffeisenbank_statements.multiflexi.app.json
@@ -43,7 +43,7 @@
             "required": true
         },
         "STATEMENT_LINE": {
-            "type": "select",
+            "type": "set",
             "description": "Bank Statement line",
 	    "defval": "ADDITIONAL",
             "hint": "MAIN",
@@ -72,7 +72,7 @@
         },
         "STATEMENT_LINE": {
             "description": "Statement line can be MAIN or ADDITIONAL",
-            "type": "select",
+            "type": "set",
             "description": "Bank Statement line",
             "defval": "ADDITIONAL",
             "options": {
