Replaced 'checkbox' with 'bool' in multiflexi/raiffeisenbank_statements_sharepoint_checker.multiflexi.app.json

--- a/multiflexi/raiffeisenbank_statements_sharepoint_checker.multiflexi.app.json
+++ b/multiflexi/raiffeisenbank_statements_sharepoint_checker.multiflexi.app.json
@@ -37,7 +37,7 @@
             "required": true
         },
         "STATEMENT_LINE": {
-            "type": "select",
+            "type": "set",
             "description": "Bank Statement line",
 	    "defval": "ADDITIONAL",
             "hint": "MAIN",
