--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,9 @@
     "require": {
         "ext-curl": "*",
         "vgrem/php-spo": "^3",
-        "vitexsoftware/pohoda-connector": "dev-main",
-        "vitexsoftware/rbczpremiumapi": "dev-main",
-        "spojenet/pohoda-sql": "dev-main"
+        "vitexsoftware/pohoda-connector": "^0.8",
+        "vitexsoftware/rbczpremiumapi": "^1.4",
+        "spojenet/pohoda-sql": "^0.1"
     },
     "autoload": {
         "psr-4": {
@@ -31,9 +31,9 @@
     "require-dev": {
         "phpunit/phpunit": "*",
         "phpstan/phpstan": "*",
-        "friendsofphp/php-cs-fixer": "^3.61",
-        "ergebnis/composer-normalize": "^2.43",
-        "ergebnis/php-cs-fixer-config": "^6.34"
+        "friendsofphp/php-cs-fixer": "^3.71",
+        "ergebnis/composer-normalize": "^2.45",
+        "ergebnis/php-cs-fixer-config": "^6.45"
     },
     "config": {
         "allow-plugins": {
