--- a/multiflexi/raiffeisenbank_statements_sharepoint_uploader.multiflexi.app.json
+++ b/multiflexi/raiffeisenbank_statements_sharepoint_uploader.multiflexi.app.json
@@ -7,9 +7,9 @@
     "cmdparams": "",
     "deploy": "apt install pohoda-raiffeisenbank",
     "homepage": "https://github.com/Spoje-NET/pohoda-raiffeisenbank",
-    "requirements": "Office365,RaiffeisenBank",
+    "requirements": ["Office365", "RaiffeisenBank"],
     "ociimage": "",
-    "topics": "Raiffeisen,Bank,Statements,Check",
+    "topics": ["Raiffeisen", "Bank", "Statements", "Check"],
     "uuid": "3f5dc042-afa3-40b8-9bf0-ed836dae9980",
     "environment": {
         "ACCOUNT_NUMBER": {
