--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: pohoda-raiffeisenbank
 Section: utils
 Priority: optional
 Maintainer: Vítězslav Dvořák <info@vitexsoftware.cz>
-Build-Depends: debhelper-compat (= 12)
+Build-Depends: debhelper-compat (= 12), jq, moreutils
 Standards-Version: 4.5.0
 Homepage: https://github.com/Spoje-NET/pohoda-raiffeisenbank
 
